[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"